--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
-
-/*Reset*/
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-li{
-    list-style-type: none;/*retira as bolinhas do elemento li*/
-}
-
-/*Heder*/
-
-:root{
+:root {
     --blue: #00008b;
     --gray: #555555;
-    --skyblue: #00BFFF;
+    --skyblue: #00bfff;
     --silver: #c0c0c0;
     --red: #ff0000;
     --white: #ffffff;
-    --dargray: #959595;
+    --darkgray: #959595;
 }
 
-.main-header{
+body {
+    font: 400 22px "Roboto", sans-serif; /*Dar fonte a todo body, com peso regular 400 e tamanho 22, caso nao ache  a fonte importada ultiliza a fonte secundaria*/
+}
+
+li{
+    list-style-type: none; /*retira as bolinhas dos elementos*/
+}
+
+/*Header*/
+
+.main-header {
     background-image: url(background-image.png);/*adicionar a imagem no fundo do topo*/
     background-position: 50% 39%;/*alinha os elementos nos eixos x e y*/
     display: flex;/*colocar os elementos centralizados*/
@@ -33,102 +34,195 @@ li{
     align-items: center;/*centralizar os elementos*/
 }
 
-.main-nav{
+.main-nav {
     width: 100%;/*ocupar toda a area disponivel*/
-    /*   padding: 0 16px;primeiro cima/baixo, segundo esquerda/direita
-    margin: 0 auto;/* nao aplica cima/baixo, o auto distribui o maimo possivel a direita e para a esquerda
-    como repete no container ele é apagado e colocamos no html a class container junto*/
+    
 }
 
-.header-list-container{
+.header-list-container {
     display: flex;/*colocar os elementos na mesma linha*/
     justify-content: space-between;/*adiciona um espaçamento entre os itens*/
     align-items: center;/*garantir que fiquem alinhados na mesma linha*/
     padding: 16px 0;/*primeiro é esquerda e direita, segundo cima e baixo*/
 }
+    
+.nav-item {
 
-.nav-item{
     text-transform: uppercase;/*deixar todas as letras em maiusculo*/
-    color:var(--blue);
+    color: var(--blue);
 }
 
-hr{
+hr {
     width: 100%;/*ocupar toda area disponivel*/
 }
 
-.nav-item a{
+.nav-item a {
     text-decoration: none;/*remove o underline do ancora*/
     color: inherit;/*herda a or do elemento pai (neste caso é o nav-item)*/
 }
 
-.nav-item:hover{
+.nav-item:hover {
     color: rgba(0, 0, 139, 0.7);/*quando passar o mouse troca a cor / rgba passa a cor e no final*/
     transition: 0.2s;
 }
 
-.main-about{
+.main-about {
     padding: 40px 0 64px;
 }
 
-.container{
-    max-width: 600px;/*travar a largura maxima que definimos para o projeto*/
-    padding: 0 16px;/*primeiro cima/baixo, segundo esquerda/direita*/
-    margin: 0 auto;/* nao aplica cima/baixo, o auto distribui o maimo possivel a direita e para a esquerda*/
+.container {
+    max-width: 600px; /*trava a a largura maxima de um que definimos para o projeto*/
+    padding: 0 16px; /*primeiro cima/baixo, segundo esquerda/direita*/
+    margin: 0 auto; /*não aplica cima/baixo, o auto deistribui o maximo para direita e esquerda*/
+    
 }
-
-.about-title{
-    font-family: "raleway", sans-serif;/*pega a onte importada, caso ele nao encontre utiliza a sans-serif*/
-    font-size: 32px;/*tamanho da fonte*/
+.title-median {
+    font-family: "Raleway",sans-serif; /*pega a fonte importada, caso ele não encontre ultiliza a sans- serifi*/
+    font-size: 32px;
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 24px;
 }
 
-.about-image{
-    float: left;/*alinha a imagem esquerda e o texto a direita*/
-    margin: 0 20px 10px 0;/*o topo, 20 direita, 10 baixo, 0 esquerda*/
-    /*diminuir o tamanho das imagens*/
-    width: 200px;/*largura*/
-    height: auto;/*evita a distorção de imagen*/
+.about-image {
+    float: left; /*Alinha a imagem a esquerda e o texto a direita*/
+    margin: 0 20px 10px 0; /*o topo, 20 direita, 10 baixo e 0 esquerda*/
+    width: 200px; /*largura*/
+    height: auto; /*evita a distorçao da imagem*/
 }
 
-.about-description{
-    color: var(--gray);/*utiliza variavel de cor ciado no root*/
-    text-align: justify;/*justifica o texto*/
+.about-description {
+    color: var(--gray); /*utiliza variavel de cor criando no root*/
+    text-align: justify; /*justificaa o texto*/
 }
 
-/*footer*/
-
-.main-footer{
-    background-color: var(--skyblue);/*aplica cor no fundo do rodape*/
-    padding: 15px 0;/*aplica espaçamento em cima/baixo e na esquerda/direita*/
+/*Footer*/
+.main-footer {
+    background-color: var(--skyblue); /*aplica cor no fundo do rodapé*/
+    padding: 15px 0; /*aplica o espaçamento 15px cima/baixo e 0 esquerda/direita*/
 }
 
-.main-footer-container{
-    display: flex;/*deixar tudo na mesma linha*/
-    align-items: center;/*alinha todos os elementos*/
-    justify-content: space-between;/*colar nome de um lado e lista de icones do outro*/  
+.footer-container {
+    display: flex; /*deixar tudo na mesma linha*/
+    align-items: center; /* alinha todos os elementos*/
+    justify-content:space-between /* colar nome de um lado e lista de icones do outro*/
 }
 
-.title-smaller{
-    font-family: "Raleway", sans-serif;/*pegar a fote importada*/
-    color: var(--blue);/*aplicar cor com a variavel criada no root do css*/
-    font-size: 26px;/*aumenta o tamanho da fonte*/
+.title-smaller {
+    font-family: "Raleway", sans-serif; /* pegar a fonte importada*/
+    color: var(--blue); /*aplica cor com a variavel criada no root no CSS*/
+    font-size: 26px; /*aumenta o tamanho da fonte*/
+
 }
 
-.list-container{
-    display: flex;/*deixar o elementos na mesma linha*/
-    align-items: center;/*alinhar todos os elementos*/
-    justify-content: space-between;/*colocar o nome de um lado e os icones do outro*/
-}
 
-.footer-item{
+.footer-item { 
     width: 50px;
     height: 50px;
-    padding: 15px 0;/*aplica espaçamento 15px em cima/baixo, e 0px direita/esquerda*/
+    padding: 15px 0; /*aplica espaçamento 15px cima/baixo e 0 esquerda/direita*/
 }
 
-.footer-item + .footer-item{
-    margin-left: 16px;/*aplica na mesma class seguindo em diante, ate chegar seguindo em diante, ate chegar em um elemento*/
-    
+.footer-item + .footer-item {
+    margin-left: 16px; /*Aplica na mesma class seguindo em diante, ate chegar seguindo em um elemento pai*/
+}
+
+/* Contato*/
+
+.contact-text {
+    text-align: center; /*Alinhha o texto*/
+    margin-bottom: 30px; /*Separa o paragrafo do formulário*/
+    font-size: 28px; /* Altera o tamanho da fonte*/
+    color: var(--gray); /*altera a cor do texto*/
+}
+
+.contact{
+    background-color: var(--skyblue); /* cor do fundo do formulario*/
+    padding: 30px; /*espaçamento*/
+    max-width: 600px; /*tamanho frfinifo para o projeto*/
+    margin-right: auto; /*empura para direita*/
+    margin-left: auto; /*empura para esquerda*/
+    margin-bottom: 20px; /*espaçamento  para baixo*/
+}
+
+.contact-label{
+    display: block; /*coloca os elementos um em cima do outro*/
+    margin-bottom: 20px; /*espaçamento  para baixo*/
+    color: var(--blue); /*altera a cor do texto*/
+}
+
+.contact-field {
+    display:block; /*coloca os elementos um em cima do outro*/
+    width: 100%; /*ocupa o mespaço maximo disponivel*/
+    height: 30px; /* aumenta a altura do campo*/
+    font-size: 16px; /* Altera o tamanho da fonte*/
+    padding-left: 10px; /* empurra o elemento de dento do campo para a esquerda*/
+    border: none; /*Remove a borda*/
+}
+
+.contact-field:focus { /*Troca a cor do fundo da area do formulário ao clicar*/
+    background-color: var(--silver); /* cor do fundo */
+    outline: none; /*remove a linha interna do campo do formulário*/
+}
+
+textarea.contact-field {
+    height: 150px; /* aumenta a altura do campo*/
+    padding: 10px; /*espaçamento em todas as direçoes*/
+    font-family: "Roboto", calibri; /* Utiliza fonte importada, caso caso ele não encontre ultiliza a secundaria*/
+}
+
+.button-form {
+    background-color: var(--blue); /*cor do fundo do botão*/
+    color: var(--white); /*cor da fonte  botão*/
+    border: 2px solid var(--blue); /* Adiciona borda ao botão*/
+    border-radius: 10px; /* Arredonda as bordas do botão*/
+    padding: 2px 6px; /* aumenta o botão 2 para cima/baixo e 6 esquerda/direita*/
+    font-weight: bold; /* aumenta o peso da fonte, deixa ela mais espeça*/
+    cursor: pointer; /*modifica o cursor*/
+}
+
+.button-form:hover {
+    background-color: var(--white); /*cor do fundo do botão*/
+    color: var(--blue); /*cor da fonte  botão*/
+}
+
+.contact-maps {
+    width: 600px;
+    margin-right:auto; /*empura para direita*/
+    margin-left: auto; /*empura para esquerda*/
+    padding-bottom: 20px;  /*empurra o mapa para baixo*/
+}
+
+/*index*/
+
+.title-header{
+    font-family: "Madimi One", cursive;/*utiliza a fonte importada, caso não encontre pega a fonte secundaria*/
+    color: var(--blue);/*troca a cor da fonte do texto*/
+    font-size: 38px;/*aumenta o tamanho da fonte */
+    padding-bottom: 10px;/*cria espaçamento em baixo*/
+}
+
+.title-large{
+    font-family: "Rock Salt", cursive;/*utiliza a fonte importada, caso não encontre pega a fonte secundaria*/
+    font-size: 38px;/*tamnho da fonte*/
+    color: var(--blue);/*cor da font*/
+    text-align: center;/*contraliza o texto*/
+}
+
+.description{
+    text-align: center;
+    color: var(--gray);
+    padding-bottom: 10px;
+}
+
+.emphasis{
+    background-color: var(--skyblue);
+    color: var(--blue);
+    border-radius: 25px;
+}
+
+.product-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
 }
