--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
+/*Importa fonte do google fonts*/
+
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
+
+/*Criação de Variaveis no root do CSS*/
+
+:root {
+   --blue: #00008B;
+   --gray: #555555;
+   --skyblue: #00BFFF;
+   --silver: #c0c0c0;
+   --red: #ff0000;
+   --white: #ffffff;
+   --darkgray: #959595;
+}
+
+/*Reset em todos os elementos*/
 
 * {
     margin: 0;
@@ -6,269 +22,280 @@
     box-sizing: border-box;
 }
 
-:root {
-    --blue: #00008b;
-    --gray: #555555;
-    --skyblue: #00bfff;
-    --silver: #c0c0c0;
-    --red: #ff0000;
-    --white: #ffffff;
-    --darkgray: #959595;
-}
-
+/*Dar fonte a todo body, com peso Regula 400 e tamanho 22px, 
+caso nao ache a fonte importada utiliza a fonte secundaria*/
 body, button, input {
-    font: 400 22px "Roboto", sans-serif; /*Dar fonte a todo body, com peso regular 400 e tamanho 22, caso nao ache  a fonte importada ultiliza a fonte secundaria*/
+   font: 400 22px "Roboto", sans-serif;
+
 }
 
-li{
-    list-style-type: none; /*retira as bolinhas dos elementos*/
+/*Retira as bolinhas dos elementos li*/
+li {
+   list-style-type: none; 
 }
 
 /*Header*/
 
 .main-header {
-    background-image: url(background-image.png);/*adicionar a imagem no fundo do topo*/
-    background-position: 50% 39%;/*alinha os elementos nos eixos x e y*/
-    display: flex;/*colocar os elementos centralizados*/
-    flex-direction: column;/*alinha os elementos um embaixo do outro*/
-    align-items: center;/*centralizar os elementos*/
+    background-image: url(background-image.png); /*Adiciona imagem no fundo*/
+    background-position: 50% 39%; /*Alinha os elementos nos eixos x e y*/
+    display: flex; /*colocar elementos centralizados*/
+    flex-direction: column; /*alinha s elementos um embaixo do outro*/
+    align-items: center; /*centralizar os elementos*/
 }
 
 .main-nav {
-    width: 100%;/*ocupar toda a area disponivel*/
-    
+    width: 100%; /*Ocupar toda a area disponivel*/
+ /* max-width: 600px; /*trava a largura maxima que definir para o projeto
+    padding: 0 16px; /* primeiro é cima e baixo, segundo é esquerda e direita */
+    /*como repete no container ele é apagado e colocamos no html a class container junto*/
 }
 
 .header-list-container {
-    display: flex;/*colocar os elementos na mesma linha*/
-    justify-content: space-between;/*adiciona um espaçamento entre os itens*/
-    align-items: center;/*garantir que fiquem alinhados na mesma linha*/
-    padding: 16px 0;/*primeiro é esquerda e direita, segundo cima e baixo*/
-}
-    
-.nav-item {
+    display: flex; /*Colocar os elementos na mesma linha*/
+    justify-content: space-between; /*adiciona espaçamento entre os itens*/
+    align-items: center; /*garantir que fiquem alinhados na mesma linha*/
+    padding: 16px 0; /* primeiro é cima e baixo, segundo é esquerda e direita */
+ }
 
-    text-transform: uppercase;/*deixar todas as letras em maiusculo*/
+ .nav-item {
+    text-transform: uppercase; /*Deixar todas as letras em maiusculo*/
     color: var(--blue);
-}
+ }
 
-hr {
-    width: 100%;/*ocupar toda area disponivel*/
-}
+ hr {
+    width: 100%; /*Ocupar toda a area disponivel*/
+ }
 
-.nav-item a {
-    text-decoration: none;/*remove o underline do ancora*/
-    color: inherit;/*herda a or do elemento pai (neste caso é o nav-item)*/
-}
+ .nav-item a {
+    text-decoration: none; /*remove o underline do ancora*/
+    color: inherit; /*herda a cor do elemento pai (neste caso é o nav-item)*/
+ }
 
-.nav-item:hover {
-    color: rgba(0, 0, 139, 0.7);/*quando passar o mouse troca a cor / rgba passa a cor e no final*/
-    transition: 0.2s;
-}
-
-.main-about {
-    padding: 40px 0 64px;
+ .nav-item:hover {
+    color: rgba(0,0,139, 0.7);/*Quando passar o mouse troca a cor / rgba passa a cor e no final é dado uma porcentagem*/
+    transition: 0.2s; /*Adiciona um delay que tem ao trocar a cor*/
+ }
+ 
+ .main-about {
+   padding: 40px 0px 64px;
 }
 
 .container {
-    max-width: 600px; /*trava a a largura maxima de um que definimos para o projeto*/
-    padding: 0 16px; /*primeiro cima/baixo, segundo esquerda/direita*/
-    margin: 0 auto; /*não aplica cima/baixo, o auto deistribui o maximo para direita e esquerda*/
-    
+   max-width: 600px; /*trava a largura maxima que definimos para o projeto*/
+   padding: 0 16px; /* primiro cima/baixo, segundo esquerda/direita*/
+   margin: 0 auto; /*nao aplica cima/baixo, o auto distribui o maximo possivel para esquerda e direita*/
 }
+
+
+
 .title-median {
-    font-family: "Raleway",sans-serif; /*pega a fonte importada, caso ele não encontre ultiliza a sans- serifi*/
-    font-size: 32px;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 24px;
+   font-family: "Raleway", sans-serif; /*Pega a fonte importada, caso ele nao encontre utiliza a sans-sefif*/
+   font-size: 32px; /*tamanho da Fonte*/
+   text-align: center;
+   text-transform: uppercase;
+   margin-bottom: 24px;
 }
 
 .about-image {
-    float: left; /*Alinha a imagem a esquerda e o texto a direita*/
-    margin: 0 20px 10px 0; /*o topo, 20 direita, 10 baixo e 0 esquerda*/
-    width: 200px; /*largura*/
-    height: auto; /*evita a distorçao da imagem*/
+   float:left; /*Alinha a imagem esquerda e o texto a direita*/
+   margin: 0 20px 10px 0; /* 0 topo, 20 direita, 10 baixo 0 esqueda*/
+   /*diminuir o tamanho das imagens*/
+   width: 200px; /*Largura*/
+   height: auto;/*evita a disrtoçao da imagem*/
 }
 
 .about-description {
-    color: var(--gray); /*utiliza variavel de cor criando no root*/
-    text-align: justify; /*justificaa o texto*/
+   color: var(--gray); /*utiliza variavel de cor criado no root*/
+   text-align: justify; /*justifica o texto*/
 }
 
 /*Footer*/
+
 .main-footer {
-    background-color: var(--skyblue); /*aplica cor no fundo do rodapé*/
-    padding: 15px 0; /*aplica o espaçamento 15px cima/baixo e 0 esquerda/direita*/
+   background-color: var(--skyblue); /*aplica cor no fundo do rodape*/
+   padding: 15px 0; /*Aplica espaçamento 15px cima/baixo e 0px equerda/direita*/
 }
 
 .footer-container {
-    display: flex; /*deixar tudo na mesma linha*/
-    align-items: center; /* alinha todos os elementos*/
-    justify-content:space-between /* colar nome de um lado e lista de icones do outro*/
+   display: flex; /*Deixar tudo na mesma linha*/
+   align-items: center; /* Alinha todos os elementos*/
+   justify-content: space-between; /*Colar nome de um lado e lista de icones do outro*/
 }
 
 .title-smaller {
-    font-family: "Raleway", sans-serif; /* pegar a fonte importada*/
-    color: var(--blue); /*aplica cor com a variavel criada no root no CSS*/
-    font-size: 26px; /*aumenta o tamanho da fonte*/
-
+   font-family: "Raleway", sans-serif; /*Pegar a fonte importada*/
+   color: var(--blue); /*Aplica cor com a variavel criada no root do CSS*/
+   font-size: 26px; /*Aumenta o tamanho da fonte*/
 }
 
-
-.footer-item { 
-    width: 50px;
-    height: 50px;
-    padding: 15px 0; /*aplica espaçamento 15px cima/baixo e 0 esquerda/direita*/
+.footer-item {
+   width: 50px;
+   height: 50px;
+   padding: 15px 0; /*Aplica espaçamento 15px cima/baixo e 0px equerda/direita*/
 }
 
 .footer-item + .footer-item {
-    margin-left: 16px; /*Aplica na mesma class seguindo em diante, ate chegar seguindo em um elemento pai*/
+   margin-left: 16px; /*Aplica na mesma class seguindo em diante, ate chegar em um elemento */
 }
 
-/* Contato*/
+/*Contato*/
 
 .contact-text {
-    text-align: center; /*Alinhha o texto*/
-    margin-bottom: 30px; /*Separa o paragrafo do formulário*/
-    font-size: 28px; /* Altera o tamanho da fonte*/
-    color: var(--gray); /*altera a cor do texto*/
+   text-align: center; /*Centralizar o texto*/
+   margin-bottom: 30px; /*Separa o paragrafo do formulario*/
+   font-size: 28px; /*Altera o tamanho da Fonte*/
+   color: var(--gray);
 }
 
-.contact{
-    background-color: var(--skyblue); /* cor do fundo do formulario*/
-    padding: 30px; /*espaçamento*/
-    max-width: 600px; /*tamanho frfinifo para o projeto*/
-    margin-right: auto; /*empura para direita*/
-    margin-left: auto; /*empura para esquerda*/
-    margin-bottom: 20px; /*espaçamento  para baixo*/
+.contact {
+   background-color: var(--skyblue); /*Cor do fundo do formulario*/
+   padding: 30px; /*espaçamento*/
+   max-width: 600px; /*Tamanho definido para o projeto*/
+   margin-right: auto; /*Empurra para direita*/
+   margin-left: auto; /*Empurra para esquerda*/
+   margin-bottom: 20px; /*espaçamento para baixo*/
 }
 
-.contact-label{
-    display: block; /*coloca os elementos um em cima do outro*/
-    margin-bottom: 20px; /*espaçamento  para baixo*/
-    color: var(--blue); /*altera a cor do texto*/
+.contact-label {
+   display: block; /*coloca os elemento um em cima do outro*/
+   margin-bottom: 20px; /*Espaçamento para baixo*/
+   color: var(--blue); /*Altera cor da Fonte*/
 }
 
 .contact-field {
-    display:block; /*coloca os elementos um em cima do outro*/
-    width: 100%; /*ocupa o mespaço maximo disponivel*/
-    height: 30px; /* aumenta a altura do campo*/
-    font-size: 16px; /* Altera o tamanho da fonte*/
-    padding-left: 10px; /* empurra o elemento de dento do campo para a esquerda*/
-    border: none; /*Remove a borda*/
+   display: block; /*Coloca os elemento um em cima do outro*/
+   width: 100%; /*Ocupa o espaço maximo disponivel*/
+   height: 30px; /*Aumenta a altura do Campo*/
+   font-size: 16px; /*Altera o tamanho da Fonte*/
+   padding-left: 10px; /*Empurra o elemente dentro do campo para esquerda*/
+   border: none; /*Remove a Borda*/
 }
-
-.contact-field:focus { /*Troca a cor do fundo da area do formulário ao clicar*/
-    background-color: var(--silver); /* cor do fundo */
-    outline: none; /*remove a linha interna do campo do formulário*/
+.contact-field:focus { /*troca a cor do fundo da area do formulario ao clicar */
+   background-color: var(--silver); /*Cor do fundo*/
+   outline: none; /*Remove a linha interna do campo do formulario*/
 }
 
 textarea.contact-field {
-    height: 150px; /* aumenta a altura do campo*/
-    padding: 10px; /*espaçamento em todas as direçoes*/
-    font-family: "Roboto", calibri; /* Utiliza fonte importada, caso caso ele não encontre ultiliza a secundaria*/
+   height: 150px; /*Altera a altura do campo*/
+   padding: 10px; /*dar espaçamento em todas as direções*/
+   font-family: "Roboto", Calibri; /*Utiliza fonte importada, caso nao encontre usa alternativa*/
 }
 
 .button-form {
-    background-color: var(--blue); /*cor do fundo do botão*/
-    color: var(--white); /*cor da fonte  botão*/
-    border: 2px solid var(--blue); /* Adiciona borda ao botão*/
-    border-radius: 10px; /* Arredonda as bordas do botão*/
-    padding: 2px 6px; /* aumenta o botão 2 para cima/baixo e 6 esquerda/direita*/
-    font-weight: bold; /* aumenta o peso da fonte, deixa ela mais espeça*/
-    cursor: pointer; /*modifica o cursor*/
+   background-color: var(--blue); /*Cor do fundo do botao*/
+   color: var(--white); /*Cor da fonte do botao*/
+   border: 2px solid var(--blue); /*Adiciona borda ao botao*/
+   border-radius: 10px; /*Arredonda as bordas do botao*/
+   padding: 2px 6px; /*Aumenta o botao 2 para cima/baixo e 6 para esquerda/direita*/
+   font-weight: bold; /**aumenta o peso da fonte, deixar ela mais espeça*/
+   cursor: pointer; 
 }
 
 .button-form:hover {
-    background-color: var(--white); /*cor do fundo do botão*/
-    color: var(--blue); /*cor da fonte  botão*/
+   background-color: var(--white); /*Cor do fundo do botao*/
+   color: var(--blue); /*Cor da fonte do botao*/
 }
 
 .contact-maps {
-    width: 600px;
-    margin-right:auto; /*empura para direita*/
-    margin-left: auto; /*empura para esquerda*/
-    padding-bottom: 20px;  /*empurra o mapa para baixo*/
+   width: 600px;
+   margin-right: auto;
+   margin-left: auto;
+   padding-bottom: 20px;
 }
 
-/*index*/
+/* Index*/
 
-.title-header{
-    font-family: "Madimi One", cursive;/*utiliza a fonte importada, caso não encontre pega a fonte secundaria*/
-    color: var(--blue);/*troca a cor da fonte do texto*/
-    font-size: 38px;/*aumenta o tamanho da fonte */
-    padding-bottom: 10px;/*cria espaçamento em baixo*/
+.title-header {
+   font-family: "Madimi One", cursive; /*Utiliar a fonte Importada, 
+   caso nao encontre pega a fonte secundaria*/
+   color: var(--blue); /*Troca a cor da fonte*/
+   font-size: 38px; /*Aumenta o tamanho da fonte*/ 
+   padding-bottom: 10px; /*Cria espaçamento em baixo*/
 }
 
-.title-large{
-    font-family: "Rock Salt", cursive;/*utiliza a fonte importada, caso não encontre pega a fonte secundaria*/
-    font-size: 38px;/*tamnho da fonte*/
-    color: var(--blue);/*cor da font*/
-    text-align: center;/*contraliza o texto*/
+.title-large {
+   font-family: "Rock Salt", cursive; /*Utiliar a fonte Importada, 
+   caso nao encontre pega a fonte secundaria*/
+   font-size: 38px; /*Tamanho da Fonte*/
+   color: var(--blue); /*Cor da Fonte*/
+   text-align: center; /*Centraliza o texto*/
 }
 
-.description{
-    text-align: center;
-    color: var(--gray);
-    padding-bottom: 10px;
+.description {
+   text-align: center; /**/
+   color: var(--gray);
+   padding-bottom: 10px;
 }
 
-.emphasis{
-    background-color: var(--skyblue);
-    color: var(--blue);
-    border-radius: 25px;
+.emphasis {
+   background-color: var(--skyblue);
+   color: var(--blue);
+   border-radius: 25px;
 }
 
-.product-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 40px;
-    padding-bottom: 30px;
+.product-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   gap: 40px;
+   padding-bottom: 30px;
 }
 
-.product{
-    display: flex;/*colocar todos na mesma linha*/
-    flex-direction: column;/*alinha em coluna, um embaixo do outro*/
-    align-items: center;/*alinha os intens ao centro*/
+.product {
+   display: flex; /*Colocar todos na mesma linha*/
+   flex-direction: column; /*Alinha em coluna, um embaixo do outro*/
+   align-items: center; /*Alinha os item ao centro*/
 }
 
-.product-title{
-    font-size: 20px;
-    margin-bottom: 6px;
+.product-title {
+   font-size: 20px;
+   margin-bottom: 6px;
 }
 
-.product-image{
-    width: 320px;/*trava olocar 2 produtos por linha, pq o epaço do projeto é do 320px*/
-    height: 220px;/*trava a altur da imagem*/
-    margin-bottom: 20px;/*aplica  espaço abaixo da imagem*/
+.product-image {
+   width: 320px; /*travar a largura da imagem para colocar 
+   colocar 2 produtos por linha, 
+   pq o espaço do projeto é de 600px*/
+   height: 220px; /*travar a altura da imagem*/
+   margin-bottom: 20px; /*Aplica um espaço abaixo da imagem*/
 }
 
 .product-price-container{
-    width: 100%;/*ocupar 100% do espaço disponivel*/
-    display: flex;/*alinha os eleentos na mesma linha*/
+   width: 100%; /*Ocupar 100% do espaço disponivel*/
+   display: flex; /*alinha os elementos na mesma linha*/
    justify-content: space-between;
    align-items: center;
 }
 
-.product-price{
-    font-family: "Raleway", sans-serif;
-    font-weight: bold;
-    font-size: 20px;
+.product-price {
+   font-family: "Raleway", sans-serif;
+   font-size: 20px;
+   font-weight: bold; 
 }
 
-.button-hover{
-    background-color: var(--skyblue);
-    color: var(--blue);
-    border: 2px solid var(--skyblue);
-    border-radius: 4px 2px;
-    border-radius: 10px;
-    padding: 4px 2px;
-    font-weight: bold;
-    cursor: pointer;
+.button-hover {
+   background-color: var(--skyblue);
+   color: var(--blue);
+   border: 2px solid var(--skyblue); 
+   border-radius: 10px;
+   padding: 4px 2px;
+   font-weight: bold;
+   cursor: pointer;
 }
 
-.button-hover:hover{
-    background-color: transparent;
+.button-hover:hover {
+   background-color: transparent;
+}
+
+.cart-table{
+   width: 100%;
+   border-collapse: collapse;/*faz com qu as borde coas slapsem, entrem uma nas outros*/
+   padding-bottom: 6px;
+}
+
+.table-head-item{
+   text-align: start;
+   border-bottom: 1px solid var(--darkgray);/*adicionar a linha da borda embaixo*/
+   text-transform: uppercase;/*transforma o texto em maiusculo*/
 }
